--- a/public/Member/auth.css
+++ b/public/Member/auth.css
@@ -1,136 +1,103 @@
-/* From Uiverse.io by zanina-yassine */
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap");
+* {
+    margin: 0;
+    padding: 0;
+    font-family: "Roboto", sans-serif;
+}
+h1 {
+    text-align: center;
+}
+.container {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 90vh;
+}
 .modal {
-    width: fit-content;
-    height: fit-content;
-    background: #FFFFFF;
-    box-shadow: 0px 187px 75px rgba(0, 0, 0, 0.01), 0px 105px 63px rgba(0, 0, 0, 0.05), 0px 47px 47px rgba(0, 0, 0, 0.09), 0px 12px 26px rgba(0, 0, 0, 0.1), 0px 0px 0px rgba(0, 0, 0, 0.1);
+    background: #ffffff;
+    box-shadow: 0px 187px 75px rgba(0, 0, 0, 0.01),
+        0px 105px 63px rgba(0, 0, 0, 0.05), 0px 47px 47px rgba(0, 0, 0, 0.09),
+        0px 12px 26px rgba(0, 0, 0, 0.1), 0px 0px 0px rgba(0, 0, 0, 0.1);
     border-radius: 26px;
-    max-width: 450px;
-  }
+    width: 500px;
+    height: fit-content;
+    padding: 30px 0;
+}
 
-  .form {
+.form {
     display: flex;
     flex-direction: column;
     gap: 20px;
     padding: 20px;
-  }
+}
 
-  .payment--options {
-    width: calc(100% - 40px);
-    display: grid;
-    grid-template-columns: 33% 34% 33%;
-    gap: 20px;
-    padding: 10px;
-  }
-
-  .payment--options button {
-    height: 55px;
-    background: #F2F2F2;
-    border-radius: 11px;
-    padding: 0;
-    border: 0;
-    outline: none;
-  }
-
-  .payment--options button svg {
-    height: 18px;
-  }
-
-  .payment--options button:last-child svg {
-    height: 22px;
-  }
-
-  .separator {
-    width: calc(100% - 20px);
-    display: grid;
-    grid-template-columns: 1fr 2fr 1fr;
-    gap: 10px;
-    color: #8B8E98;
-    margin: 0 10px;
-  }
-
-  .separator > p {
-    word-break: keep-all;
-    display: block;
-    text-align: center;
-    font-weight: 600;
-    font-size: 11px;
-    margin: auto;
-  }
-
-  .separator .line {
-    display: inline-block;
+input {
     width: 100%;
-    height: 1px;
-    border: 0;
-    background-color: #e8e8e8;
-    margin: auto;
-  }
+}
 
-  .credit-card-info--form {
+input.log {
+    height: 60px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.credit-card-info--form {
     display: flex;
     flex-direction: column;
     gap: 15px;
-  }
+}
 
-  .input_container {
+.input_container {
     width: 100%;
     height: fit-content;
     display: flex;
     flex-direction: column;
     gap: 5px;
-  }
+}
 
-  .split {
-    display: grid;
-    grid-template-columns: 4fr 2fr;
-    gap: 15px;
-  }
-
-  .split input {
-    width: 100%;
-  }
-
-  .input_label {
+.input_label {
     font-size: 10px;
-    color: #8B8E98;
+    color: #8b8e98;
     font-weight: 600;
-  }
+}
 
-  .input_field {
+span.input_label {
+    font-size: 15px;
+    text-align: center;
+}
+
+.input_field {
     width: auto;
     height: 40px;
     padding: 0 0 0 16px;
     border-radius: 9px;
     outline: none;
-    background-color: #F2F2F2;
+    background-color: #f2f2f2;
     border: 1px solid #e5e5e500;
     transition: all 0.3s cubic-bezier(0.15, 0.83, 0.66, 1);
-  }
+}
 
-  .input_field:focus {
+.input_field:focus {
     border: 1px solid transparent;
     box-shadow: 0px 0px 0px 2px #242424;
     background-color: transparent;
-  }
+}
 
-  .purchase--btn {
+.login-btn {
     height: 55px;
-    background: #F2F2F2;
+    background: #f2f2f2;
     border-radius: 11px;
     border: 0;
     outline: none;
     color: #ffffff;
     font-size: 13px;
     font-weight: 700;
-    background: linear-gradient(180deg, #363636 0%, #1B1B1B 50%, #000000 100%);
-    box-shadow: 0px 0px 0px 0px #FFFFFF, 0px 0px 0px 0px #000000;
+    background: linear-gradient(180deg, #363636 0%, #1b1b1b 50%, #000000 100%);
+    box-shadow: 0px 0px 0px 0px #ffffff, 0px 0px 0px 0px #000000;
     transition: all 0.3s cubic-bezier(0.15, 0.83, 0.66, 1);
-  }
+}
 
-  .purchase--btn:hover {
-    box-shadow: 0px 0px 0px 2px #FFFFFF, 0px 0px 0px 4px #0000003a;
-  }
-
- 
-
+.login-btn:hover {
+    box-shadow: 0px 0px 0px 2px #ffffff, 0px 0px 0px 4px #0000003a;
+}
