--- a/public/Member/style.css
+++ b/public/Member/style.css
@@ -5,9 +5,8 @@
     padding: 0;
     font-family: "Roboto", sans-serif;
 }
-body {
-    height: 2000px;
-}
+
+
 /* Navbar */
 .logo {
     font-weight: bold;
@@ -28,7 +27,7 @@ nav {
     align-items: center;
     justify-content: space-between;
     width: 90%;
-    padding: 30px 0px;
+    padding: 20px 0px;
 }
 li {
     list-style-type: none;
@@ -40,22 +39,15 @@ li a {
     font-weight: 400;
     text-decoration: none;
 }
-.navbar_cari {
-    padding-left: 20px;
-    width: 20%;
-    height: 40px;
+.n {
+    color: black;
+}
+.n::placeholder {
+    color: black;
+}
+.n:focus {
+   outline: none;
     border: none;
-    background: rgba(255, 255, 255, 0.2); /* Warna latar belakang semi-transparan */
-    backdrop-filter: blur(10px);
-    border-radius: 5px;
-    color: white;
-    letter-spacing: 2px;
-}
-.navbar_cari::placeholder {
-    color: white;
-}
-.navbar_cari:focus {
-    outline: none;
 }
 .btn {
     padding: 10px 10px;
@@ -212,7 +204,7 @@ li a {
     color: red;
 }
 /* Card */
-.grid {
+.penataan {
     width: 90%;
     height: 80%;
     display: grid;
@@ -220,8 +212,8 @@ li a {
     gap: 5px;
     grid-template-columns: repeat(5, 1fr);
 }
-.card {
-    width: 20%;
+.kartu {
+    width: 90%;
     min-width: 250px;
     padding: 10px 12px;
     border: 1px solid #cce7d0;
@@ -235,7 +227,7 @@ li a {
     flex-direction: column;
 }
 
-.card:hover {
+.kartu:hover {
     box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.06);
 }
 
@@ -272,7 +264,7 @@ li a {
     color: #088178;
     margin-left: 20px;
 }
-.card a {
+.kartu a {
    align-self: flex-end;
    text-decoration: none;
    margin: 10px;
@@ -289,12 +281,12 @@ li a {
 
 
   @media (max-width: 1024px) {
-    .grid {
+    .penataan {
       grid-template-columns: repeat(2, 1fr);
     }
   }
   @media (max-width: 600px) {
-    .grid {
+    .penataan {
       grid-template-columns: 1fr;
     }
   }
