--- a/public/Member/style.css
+++ b/public/Member/style.css
@@ -12,6 +12,7 @@
     font-weight: bold;
     font-size: 2rem;
 }
+
 header {
     position: fixed;
     top: 0;
@@ -38,16 +39,6 @@ li a {
     font-size: 20px;
     font-weight: 400;
     text-decoration: none;
-}
-.n {
-    color: black;
-}
-.n::placeholder {
-    color: black;
-}
-.n:focus {
-   outline: none;
-    border: none;
 }
 .btn {
     padding: 10px 10px;
@@ -122,6 +113,8 @@ li a {
 }
 .f {
     width: 100%;
+    display: flex;
+    flex-direction: column;
 }
 .f label {
     font-weight: 400;
@@ -134,6 +127,18 @@ li a {
     border: none;
     background-color: rgba(184, 179, 179, 0.473);
     padding: 0px 10px;
+
+}
+.f select {
+    height: 40px;
+    border-radius: 5px;
+    border: none;
+    background-color: rgba(184, 179, 179, 0.473);
+    padding: 0px 10px;
+}
+.f option {
+    color: black;
+    background-color: white;
 }
 
 .f input::placeholder {
@@ -147,10 +152,7 @@ li a {
    padding: 13px 30px;
    border-radius: 30px;
 }
-.f {
-    display: flex;
-    flex-direction: column;
-}
+
 .filter-kategori {
     display: flex;
     align-items: center;
